--- a/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
+++ b/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "5c55343e-4c69-4a0e-9c86-f0d3ef8bb332",
+   "metadata": {},
+   "source": [
+    "\"\"\"\n",
+    "Authors: Salvatore Mandra (salvatore.mandra@nasa.gov),\n",
+    "         Jeffrey Marshall (jeffrey.s.marshall@nasa.gov)\n",
+    "\n",
+    "Copyright © 2021, United States Government, as represented by the Administrator\n",
+    "of the National Aeronautics and Space Administration. All rights reserved.\n",
+    "\n",
+    "The HybridQ: A Hybrid Simulator for Quantum Circuits platform is licensed under\n",
+    "the Apache License, Version 2.0 (the \"License\"); you may not use this file\n",
+    "except in compliance with the License. You may obtain a copy of the License at\n",
+    "http://www.apache.org/licenses/LICENSE-2.0.\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software distributed\n",
+    "under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR\n",
+    "CONDITIONS OF ANY KIND, either express or implied. See the License for the\n",
+    "specific language governing permissions and limitations under the License.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bad14cf5-5112-4afe-8c61-6b5b1c5cfa37",
    "metadata": {},
