--- a/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
+++ b/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
@@ -5,7 +5,6 @@
    "id": "5c55343e-4c69-4a0e-9c86-f0d3ef8bb332",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
     "Authors: Salvatore Mandra (salvatore.mandra@nasa.gov),\n",
     "         Jeffrey Marshall (jeffrey.s.marshall@nasa.gov)\n",
     "\n",
@@ -20,8 +19,7 @@
     "Unless required by applicable law or agreed to in writing, software distributed\n",
     "under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR\n",
     "CONDITIONS OF ANY KIND, either express or implied. See the License for the\n",
-    "specific language governing permissions and limitations under the License.\n",
-    "\"\"\"\n"
+    "specific language governing permissions and limitations under the License."
    ]
   },
   {
