--- a/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
+++ b/examples/SC21/SC21_noise_figs_Sect_VI.ipynb
@@ -76,7 +76,6 @@
     "from itertools import product\n",
     "from typing import List\n",
     "\n",
-    "\n",
     "from hybridq.gate import Gate\n",
     "from hybridq.circuit.simulation import simulate\n",
     "from hybridq.extras.random import get_rqc\n",
@@ -88,15 +87,14 @@
     "from hybridq.noise.channel.utils import ptrace\n",
     "from hybridq.noise.channel import GlobalDepolarizingChannel, LocalDepolarizingChannel\n",
     "\n",
-    "\n",
     "import qutip as qt\n",
     "from qutip.qip.operations import expand_operator\n",
     "\n",
     "# for plotting\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import rc\n",
-    "rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']})\n",
-    "rc('text', usetex=True)\n",
+    "# rc('font',**{'family':'sans-serif','sans-serif':['Helvetica']})\n",
+    "# rc('text', usetex=True)\n",
     "\n",
     "# qutip specs\n",
     "qt.about()"
@@ -123,6 +121,7 @@
     "Z = np.diag([1, -1])\n",
     "PAULIS = [I, X, Y, Z]\n",
     "\n",
+    "\n",
     "def depolarizing_channel(p: float, nq: int = 1):\n",
     "    \"\"\"\n",
     "    Depolarizing channel of nq qubits, with depolarizing probability `p`.\n",
@@ -131,7 +130,6 @@
     "    \n",
     "    Returns a tuple of the weighted Kraus operators\n",
     "    \"\"\"\n",
-    "\n",
     "    def _kron_prod(matrices):\n",
     "        a = matrices[0]\n",
     "        for i in range(1, len(matrices)):\n",
@@ -140,13 +138,14 @@
     "\n",
     "    all_paulis = list(product(*[PAULIS for _ in range(nq)]))\n",
     "    ops = [_kron_prod(sigmas) for sigmas in all_paulis]\n",
-    "    norm = p / 4 ** nq  # normalize by number of pauli strings\n",
+    "    norm = p / 4**nq  # normalize by number of pauli strings\n",
     "    p0 = 1 - p + norm\n",
     "    probs = [norm] * len(all_paulis)\n",
     "    probs[0] = p0  # identity\n",
     "    if not np.all([0 <= pi <= 1 for pi in probs]):\n",
     "        raise ValueError(f'Input probability {p} does note define valid map')\n",
-    "    return tuple(np.sqrt(probs[i]) * o for i, o in enumerate(ops) if probs[i] != 0)\n",
+    "    return tuple(\n",
+    "        np.sqrt(probs[i]) * o for i, o in enumerate(ops) if probs[i] != 0)\n",
     "\n",
     "\n",
     "def qt_apply(rho: qt.Qobj, krauses: List[qt.Qobj], targets: List[int]):\n",
@@ -157,12 +156,12 @@
     "    operators on the targets, to return\n",
     "    sum_i K_i rho K_i^dagger\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    N = len(rho.dims[0])\n",
     "    rho_copy = 0 * rho\n",
     "    for k in krauses:\n",
     "        if not isinstance(k, qt.Qobj):\n",
-    "            k = qt.Qobj(k, dims=[[2]*len(targets), [2]*len(targets)])\n",
+    "            k = qt.Qobj(k, dims=[[2] * len(targets), [2] * len(targets)])\n",
     "        K = expand_operator(k, N, targets=targets)\n",
     "        rho_copy += K * rho * K.dag()\n",
     "    return rho_copy"
@@ -287,16 +286,15 @@
     "fig, ax = plt.subplots(1)\n",
     "sa = np.array(steps) + 1  # offset\n",
     "\n",
-    "y1 = np.cos(theta * sa) * (1-p) ** sa\n",
+    "y1 = np.cos(theta * sa) * (1 - p)**sa\n",
     "ax.plot(steps, np.real(X_expec), 'o', label=f'HybridQ')\n",
-    "ax.plot(steps, y1,  '--', label='Exact', linewidth=2)\n",
+    "ax.plot(steps, y1, '--', label='Exact', linewidth=2)\n",
     "ax.plot(steps, np.cos(theta * sa), 'k-', label='Noiseless', linewidth=0.5)\n",
-    "\n",
     "\n",
     "ax.set_xlabel(r'time (steps)')\n",
     "ax.set_ylabel(r'$\\langle X \\rangle$')\n",
     "ax.grid()\n",
-    "ax.legend()\n"
+    "ax.legend()"
    ]
   },
   {
@@ -340,7 +338,7 @@
     }
    ],
    "source": [
-    "sizes = range(1,12)\n",
+    "sizes = range(1, 12)\n",
     "\n",
     "# since we use a random state below, let's fix the seed for exact reproducability\n",
     "np.random.seed(1)\n",
@@ -351,47 +349,44 @@
     "timing_data = {'qt': [], 'hq': []}\n",
     "for N in sizes:\n",
     "    print(f'{N} ', end='')\n",
-    "    \n",
+    "\n",
     "    # get a random density matrix to simulate from QuTiP\n",
-    "    rho_qt = qt.rand_dm(2**N, dims=[[2]*N, [2]*N])\n",
+    "    rho_qt = qt.rand_dm(2**N, dims=[[2] * N, [2] * N])\n",
     "    # density matrix with appropriate dimensions for HybridQ\n",
-    "    rho_numpy = np.reshape(rho_qt.full(), (2,)*2*N)\n",
+    "    rho_numpy = np.reshape(rho_qt.full(), (2, ) * 2 * N)\n",
     "\n",
     "    # different probabilities for each qubit\n",
-    "    depol_probs = [0.05 * (n+1) for n in range(N)]\n",
+    "    depol_probs = [0.05 * (n + 1) for n in range(N)]\n",
     "\n",
-    "    \n",
     "    # first do the HybridQ simulation\n",
     "    t1_hq = time.time()\n",
     "    qubits = tuple(range(N))\n",
-    "    \n",
+    "\n",
     "    # use LocalDepolarizingChannel to build desired local noise channels\n",
     "    C = SuperCircuit(LocalDepolarizingChannel(qubits, depol_probs))\n",
-    "    \n",
+    "\n",
     "    rho_hq = dm_simulate(C, rho_numpy, optimize=backend)\n",
     "    rho_hq = np.reshape(rho_hq, (2**N, 2**N))\n",
-    "    \n",
+    "\n",
     "    t2_hq = time.time()\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # now the QuTiP simulation\n",
     "    t1_qt = time.time()\n",
     "    # Kraus operators for each qubit, and convert each operator to Qobj type\n",
     "    Krauses = [depolarizing_channel(p) for p in depol_probs]\n",
     "    qt_gates = [[qt.Qobj(k) for k in Krauses[i]] for i in range(N)]\n",
-    "    \n",
+    "\n",
     "    for n, channel in enumerate(qt_gates):\n",
     "        rho_qt = qt_apply(rho_qt, channel, n)\n",
-    "    \n",
+    "\n",
     "    t2_qt = time.time()\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    timing_data['qt'] += [t2_qt - t1_qt]\n",
     "    timing_data['hq'] += [t2_hq - t1_hq]\n",
-    "    \n",
+    "\n",
     "    # check HybridQ and QuTiP gives same result\n",
     "    np.testing.assert_array_almost_equal(rho_hq, rho_qt.full())\n",
-    "    \n",
+    "\n",
     "print(f'\\ncompleted without any error for backend: {backend}')"
    ]
   },
@@ -416,7 +411,6 @@
    ],
    "source": [
     "# now plot the results\n",
-    "\n",
     "fig, ax = plt.subplots(1)\n",
     "\n",
     "ax.plot(sizes, timing_data['hq'], 'o-', label=backend)\n",
@@ -426,7 +420,7 @@
     "ax.set_ylabel(r'time (secs)')\n",
     "ax.grid()\n",
     "ax.legend()\n",
-    "ax.set_yscale('log')\n"
+    "ax.set_yscale('log')"
    ]
   },
   {
@@ -516,17 +510,20 @@
     "rqc = get_rqc(N, n_gates)\n",
     "\n",
     "# final state, e.g. '.abc' (where '.' is not contracted)\n",
-    "fs = '.' + indices[0:N-1]  \n",
+    "fs = '.' + indices[0:N - 1]\n",
     "\n",
     "# first noiseless sim. There are two ways to do this.\n",
     "t1_hq_tn = time.time()\n",
     "# we do it via 'tn' to demonstrate the code is working as expected\n",
-    "rho_ideal_hq = dm_simulate(rqc, initial_state='+', final_state=fs+fs, optimize='tn')\n",
+    "rho_ideal_hq = dm_simulate(rqc,\n",
+    "                           initial_state='+',\n",
+    "                           final_state=fs + fs,\n",
+    "                           optimize='tn')\n",
     "t2_hq_tn = time.time()\n",
     "\n",
     "# by pure state evolution and taking partial trace (can differ slightly due to precision)\n",
     "t1_hq_pure = time.time()\n",
-    "rho_ideal_hq_pure =  ptrace(np.reshape(simulate(rqc, '+'), (2**N,)), 0)\n",
+    "rho_ideal_hq_pure = ptrace(np.reshape(simulate(rqc, '+'), (2**N, )), 0)\n",
     "t2_hq_pure = time.time()\n",
     "\n",
     "# noisy sim with tensor network contraction\n",
@@ -535,7 +532,10 @@
     "# add depolarizing noise and simulate\n",
     "noisy_circuit = add_depolarizing_noise(rqc, (p1, p2))\n",
     "C = SuperCircuit(noisy_circuit)\n",
-    "rho_noise_hq = dm_simulate(C, initial_state='+', final_state=fs+fs, optimize='tn')\n",
+    "rho_noise_hq = dm_simulate(C,\n",
+    "                           initial_state='+',\n",
+    "                           final_state=fs + fs,\n",
+    "                           optimize='tn')\n",
     "\n",
     "t2_hq_noise = time.time()\n",
     "\n",
@@ -548,9 +548,9 @@
     "print(\"rho_0 with noise\")\n",
     "print(rho_noise_hq)\n",
     "\n",
-    "\n",
-    "print(f'\\n  noiseless sim took time {t2_hq_tn - t1_hq_tn:.3f} s using tn, and {t2_hq_pure-t1_hq_pure:.3f} s using ptrace'\n",
-    "      f'\\n  noisy sim took time {t2_hq_noise - t1_hq_noise:.3f} s')"
+    "print(\n",
+    "    f'\\n  noiseless sim took time {t2_hq_tn - t1_hq_tn:.3f} s using tn, and {t2_hq_pure-t1_hq_pure:.3f} s using ptrace'\n",
+    "    f'\\n  noisy sim took time {t2_hq_noise - t1_hq_noise:.3f} s')"
    ]
   },
   {
@@ -583,41 +583,42 @@
    "source": [
     "# now run with qutip, and check same output.\n",
     "# here we simply run the full simulation, and then trace out the other qubits.\n",
-    "\n",
     "plus = (qt.basis(2, 0) + qt.basis(2, 1)).unit()\n",
     "psi = qt.tensor([plus] * N)\n",
     "rho = qt.ket2dm(psi)\n",
-    "\n",
     "\n",
     "# now simulate. We do the noisy and noiseless separately\n",
     "# first noise free pure state\n",
     "t1_qt = time.time()\n",
     "for g in rqc:\n",
     "    nq = len(g.qubits)\n",
-    "    g_qt = expand_operator(qt.Qobj(g.matrix(), dims=[[2]*nq, [2]*nq]), N, targets=g.qubits)\n",
-    "    \n",
+    "    g_qt = expand_operator(qt.Qobj(g.matrix(), dims=[[2] * nq, [2] * nq]),\n",
+    "                           N,\n",
+    "                           targets=g.qubits)\n",
+    "\n",
     "    # apply gate then the noise channel.\n",
     "    psi = g_qt * psi\n",
-    "    \n",
+    "\n",
     "# now trace out other qubits\n",
     "rho_ideal_qt = psi.ptrace(0)\n",
-    "t2_qt = time.time()    \n",
+    "t2_qt = time.time()\n",
     "\n",
     "# iterate over the Gate's in the rqc, and convert to qutip.Qobj type.\n",
     "t1_qt_noise = time.time()\n",
     "for g in rqc:\n",
     "    nq = len(g.qubits)\n",
-    "    g_qt = expand_operator(qt.Qobj(g.matrix(), dims=[[2]*nq, [2]*nq]), N, targets=g.qubits)\n",
-    "    \n",
+    "    g_qt = expand_operator(qt.Qobj(g.matrix(), dims=[[2] * nq, [2] * nq]),\n",
+    "                           N,\n",
+    "                           targets=g.qubits)\n",
+    "\n",
     "    # apply gate then the noise channel.\n",
     "    rho = g_qt * rho * g_qt.dag()\n",
     "    Pd = p1 if nq == 1 else p2\n",
     "    rho = qt_apply(rho, depolarizing_channel(Pd, nq), g.qubits)\n",
-    "    \n",
+    "\n",
     "# trace out other qubits\n",
     "rho_noise_qt = rho.ptrace(0)\n",
     "t2_qt_noise = time.time()\n",
-    "\n",
     "\n",
     "print(\"rho_0 (qutip) without noise\")\n",
     "print(rho_ideal_qt)\n",
@@ -626,12 +627,12 @@
     "print(\"rho_0 (qutip) with noise\")\n",
     "print(rho_noise_qt)\n",
     "\n",
-    "\n",
     "# check qutip and hybridq agree\n",
     "np.testing.assert_array_almost_equal(rho_ideal_qt.full(), rho_ideal_hq)\n",
     "np.testing.assert_array_almost_equal(rho_noise_qt.full(), rho_noise_hq)\n",
     "\n",
-    "print(f'\\n  qutip noiseless sim took time {t2_qt - t1_qt:.3f} s.\\n  noisy sim took {t2_qt_noise - t1_qt_noise:.3f} s')"
+    "print(f'\\n  qutip noiseless sim took time {t2_qt - t1_qt:.3f} '\n",
+    "      f's.\\n  noisy sim took {t2_qt_noise - t1_qt_noise:.3f} s')"
    ]
   },
   {
@@ -645,7 +646,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -659,7 +660,54 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
