Proposed Tutorial Changes

--- a/tutorials/01_gates.ipynb
+++ b/tutorials/01_gates.ipynb
@@ -195,6 +195,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some gates require parameters to specify details on the gate. For example, the rx gate expects one parameter, the rotation angle.\n",
+    "\n",
+    "HybridQ provides an easy way to determine the number of qubits and parameters required to specify the gate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "d927f59f",
@@ -219,8 +228,6 @@
     }
    ],
    "source": [
-    "# HybridQ provides an easy way to determine the number\n",
-    "# of qubits and parameters required to specify the gate\n",
     "for name in ['rx', 'fsim', 'x']:\n",
     "    g = Gate(name)\n",
     "    print(f\"{name.upper():5s} - Number of qubits:\", g.n_qubits)\n",
@@ -248,13 +255,17 @@
    },
    "outputs": [],
    "source": [
+    "# Example 1: Symbolic qubits and params\n",
+    "\n",
     "from sympy import symbols\n",
     "\n",
     "# Define a few symbols\n",
     "α, β, γ = symbols('α β γ')\n",
     "\n",
     "# Specify all parameters at the creation of the gate\n",
-    "g1 = Gate('RX', qubits=[α], params=[β], power=γ)"
+    "g1 = Gate('RX', qubits=[α], params=[β], power=γ)\n",
+    "\n",
+    "print(g1)"
    ]
   },
   {
@@ -280,6 +291,8 @@
     }
    ],
    "source": [
+    "# Example 2: Specify inplace after creation\n",
+    "\n",
     "# Get a rotation gate without qubits nor parameters\n",
     "g2 = Gate('RX')\n",
     "\n",
@@ -292,7 +305,7 @@
     "# Check g1 == g2\n",
     "assert (g1 == g2)\n",
     "\n",
-    "g2"
+    "print(g2)"
    ]
   },
   {
@@ -311,6 +324,13 @@
     "# power will actually change the rotation angle\n",
     "assert (g1.power == 1)\n",
     "assert (g1.params[0] == (β * γ) % (4 * np.pi))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All gates provide a way to *tag* them. This is particularly useful when one wants to identify some specific gates in a circuit."
    ]
   },
   {
@@ -339,8 +359,6 @@
     }
    ],
    "source": [
-    "# All gates provide a way to *tag* them. This is particularly useful\n",
-    "# when one wants to identify some specific gates in a circuit.\n",
     "g1 = g1.set_tags(dict(a=1, b=2))\n",
     "g2.set_tags(dict(a=2), inplace=True)\n",
     "\n",
@@ -348,6 +366,13 @@
     "assert (g1 == g2)\n",
     "\n",
     "g1, g2, g1.tags['a'], g2.tags['a']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to get the matrix representing the gate by using the following command:"
    ]
   },
   {
@@ -374,8 +399,6 @@
     }
    ],
    "source": [
-    "# It is possible to get the matrix representing the\n",
-    "# gate by using the following command\n",
     "try:\n",
     "    # This should fail because no values have been provided to symbols\n",
     "    g1.matrix()\n",
@@ -386,6 +409,13 @@
     "\n",
     "# Let's specify the rotation angle\n",
     "g1.set_params([g1.params[0].subs({β: 1.1, γ: 2.2})], inplace=True).matrix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gates can be also created by providing their matrix representation using the named gate *MatrixGate*"
    ]
   },
   {
@@ -400,14 +430,14 @@
    },
    "outputs": [],
    "source": [
-    "# Gates can be also created by providing their matrix representation:\n",
     "from hybridq.gate import MatrixGate\n",
     "\n",
     "# Create a gate using its matrix representation\n",
     "gm = MatrixGate(qubits=g1.qubits, U=g1.matrix())\n",
     "\n",
     "# It is also possible to use Gate directly\n",
-    "assert (Gate('matrix', qubits=g1.qubits, U=g1.matrix()) == gm)\n",
+    "gm2 = Gate('matrix', qubits=g1.qubits, U=g1.matrix())\n",
+    "assert (gm2 == gm)\n",
     "\n",
     "# Observe that the strict equivalence '==' requires that the\n",
     "# two objects are identical (including qubits and parameters)\n",
@@ -498,7 +528,7 @@
    "id": "68e550a9",
    "metadata": {},
    "source": [
-    "**HybridQ** also allow to split any gate in terms of its Schmidt decomposition. More precisely, given any gate $G$ acting on two subset of qubits, it is possible to write $G$ as:\n",
+    "**HybridQ** also allows users to split any gate in terms of its Schmidt decomposition. More precisely, given any gate $G$ acting on two subset of qubits, it is possible to write $G$ as:\n",
     "$$\n",
     "    G = \\sum_i s_i\\, G^{(1)}_i \\otimes G^{(2)}_i\n",
     "$$\n",
@@ -526,6 +556,7 @@
       "\t MatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
       "\t MatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
       "\t MatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
+      "\n",
       "Right gates:\n",
       "\t MatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
       "\t MatrixGate(name='MATRIX', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=complex128))\n",
@@ -553,7 +584,7 @@
     "    print('\\t', _g)\n",
     "\n",
     "# Print \"right\" gates\n",
-    "print('Right gates:')\n",
+    "print('\\nRight gates:')\n",
     "for _g in s.gates[0]:\n",
     "    print('\\t', _g)\n",
     "\n",
@@ -609,6 +640,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gates can be conjugated and transposed:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "3b3d9f4b",
@@ -630,7 +668,7 @@
     }
    ],
    "source": [
-    "# Gate can be conjugated and transposed\n",
+    "# \n",
     "g = Gate('FSIM', params=[1, 2])\n",
     "gt = g.T()\n",
     "gc = g.conj()\n",
@@ -640,15 +678,22 @@
     "print(gc)\n",
     "print(ga)\n",
     "\n",
-    "assert (gt.is_transposed() == True)\n",
-    "assert (gc.is_conjugated() == True)\n",
-    "assert (ga.is_conjugated() == True)\n",
-    "assert (ga.is_transposed() == True)\n",
+    "assert (gt.is_transposed())\n",
+    "assert (gc.is_conjugated())\n",
+    "assert (ga.is_conjugated())\n",
+    "assert (ga.is_transposed())\n",
     "\n",
     "# Checks\n",
     "np.testing.assert_allclose(g.matrix().T, gt.matrix())\n",
     "np.testing.assert_allclose(g.matrix().conj(), gc.matrix())\n",
     "np.testing.assert_allclose(g.matrix().conj().T, ga.matrix())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**HybridQ** supports self-adjoint gates"
    ]
   },
   {
@@ -675,7 +720,6 @@
     }
    ],
    "source": [
-    "# HybridQ supports self-adjoint gate\n",
     "g = Gate('Y')\n",
     "\n",
     "# Print gates\n",
@@ -723,7 +767,7 @@
     "\n",
     "#### <code>Control</code>\n",
     "\n",
-    "As the name suggests, this functional gate allows to create any controlled gate."
+    "As the name suggests, this functional gate allows to create any controlled gate. Controlled gates extend any gate to only activate when all of the control qbits are |1>."
    ]
   },
   {
@@ -754,6 +798,8 @@
     "\n",
     "# Create a control gate with 3 controlling qubits\n",
     "cg = Control(c_qubits=[('x', 1), ('y', 2), ('z', 3)], gate=g)\n",
+    "# g is provided as the gate to be controlled.\n",
+    "# Now the g gate will only be applied when the 3 controlling qubits are all |1>\n",
     "\n",
     "# Print gate\n",
     "print(cg)\n",
@@ -784,7 +830,7 @@
    "source": [
     "#### <code>TupleGate</code>\n",
     "\n",
-    "<code>TupleGate</code> allows to gather together multiple gates while keeping some of the basic functionality of gates."
+    "<code>TupleGate</code> gathers together multiple gates. The combined TupleGate can then be treated as a single gate. For example,"
    ]
   },
   {
@@ -830,8 +876,22 @@
     "\n",
     "# For consistency, qubits are always sorted using 'hybridq.utils.sort'\n",
     "print(f'Qubits: {tg.qubits}')\n",
-    "print(f'Number of qubits: {tg.n_qubits}')\n",
-    "\n",
+    "print(f'Number of qubits: {tg.n_qubits}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once a tuple is created, you can add additional gates using the addition operator (i.e., '+'),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# It is possible to add gates ...\n",
     "tg = tg + (g2, g3)\n",
     "\n",
@@ -840,9 +900,30 @@
     "tg = tg + (tg, tg)\n",
     "\n",
     "# Check that gates and number of gates haven't changed\n",
-    "assert (tg.n_qubits == 3 and tg.qubits == tuple(sort(['a', 'b', 1])))\n",
-    "\n",
-    "# The TupleGate also provides a way to flatten the collection\n",
+    "assert (tg.n_qubits == 3 and tg.qubits == tuple(sort(['a', 'b', 1])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " The TupleGate also provides a way to flatten the collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TupleGate(name='TUPLE', Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_X(name='X', qubits=(1,), M=numpy.ndarray(shape=(2, 2), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)), Gate_Y(name='Y', qubits=('a',), M=numpy.ndarray(shape=(2, 2), dtype=complex128)), Gate_SWAP(name='SWAP', qubits=('a', 'b'), M=numpy.ndarray(shape=(4, 4), dtype=int64)))\n"
+     ]
+    }
+   ],
+   "source": [
     "print(tg.flatten())"
    ]
   },
@@ -1018,7 +1099,7 @@
     "# Define some qubits ...\n",
     "qubits = np.random.randint(2**32, size=5)\n",
     "\n",
-    "# ... and the subset two project\n",
+    "# ... and the subset to project\n",
     "p_qubits = np.random.choice(qubits, size=2, replace=False).tolist()\n",
     "\n",
     "# Set the desired state to project the p_qubits\n",
@@ -1076,7 +1157,7 @@
     }
    ],
    "source": [
-    "# Import Projection\n",
+    "# Import Measure\n",
     "from hybridq.gate import Measure\n",
     "\n",
     "# Let's define a random quantum state of 5 qubits\n",
@@ -1106,7 +1187,7 @@
    "source": [
     "#### <code>FunctionalGate</code>\n",
     "\n",
-    "<code>FunctionalGate</code>'s are the most general gate that are implementable in **HybridQ**. More precisely, <code>FunctionalGate</code>'s allow to directly manipulate the quantum state to easily implement gates (such as oracle) that would be hard to implement otherwise.\n",
+    "<code>FunctionalGate</code>'s are the most general gate that are implementable in **HybridQ**. More precisely, <code>FunctionalGate</code>'s allow to directly manipulate the quantum state using a defined function to easily implement gates (such as oracle) that would be hard to implement otherwise.\n",
     "\n",
     "In the following example, we will show how to implement a Grover oracle in **HybridQ**."
    ]
@@ -1222,6 +1303,14 @@
     "    # Print\n",
     "    print('{0} {1}: {2:+g}'.format('*' if i == target_state else ' ', i,\n",
     "                                   np.real_if_close(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "Thank you for trying out this tutorial. See the examples in the `examples/` folder for more details on how to use the package. Please checkout the other tutorials in the tutorials folder. Please open an issue here: https://github.com/nasa/hybridq/issues if you run into any issues or have a question. You can also contact Salvatore Mandra at salvatore.madra@nasa.gov"
    ]
   }
  ],
